--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -20,6 +20,7 @@
   "app.components.ContributeMenu.howItWorks": "",
   "app.components.ContributeType.callToAction": "",
   "app.components.ContributeType.header": "",
+  "app.components.CouldBeYou.header": "قد يكون أنت",
   "app.components.Footer.footer": "Beautiful Rising بواسطة Beautiful Rising، و مختلف المؤلفين مرخصٌ لها بموجب Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License. قد تكون أي تصاريح خارج نطاق هذا الترخيص متاحةً على [beautifulrising.org](//beautifulrising.org). إن الوثائق حول واجهة برمجة التطبيقات (API) و التي تدعّم Beautiful Rising يمكن أن [تجدها على GitHub](https://github.com/BeautifulTrouble/api-docs#api-docs).",
   "app.components.Header.aboutLink": "",
   "app.components.Header.header": "",
@@ -58,7 +59,7 @@
   "app.components.PlatformsMenu.game": "",
   "app.components.PlatformsMenu.header": "",
   "app.components.PlatformsMenu.pdf": "",
-  "app.components.PlatformsMenu.subheader": "",
+  "app.components.PlatformsMenu.subheader": "استكشف وسائل أخرى للوصول إلى صندوق الأدوات",
   "app.components.PlatformsPageComponents.chatbotHeader": "",
   "app.components.PlatformsPageComponents.gameHeader": "",
   "app.components.PlatformsPageComponents.header": "",
@@ -67,6 +68,8 @@
   "app.components.PlatformsPageComponents.what": "",
   "app.components.RegionOptions.header": "",
   "app.components.SelectedToolComponents.header": "",
+  "app.components.ShareButton.emailMessage": "",
+  "app.components.ShareButton.emailSubject": "",
   "app.components.ShareButton.header": "",
   "app.components.ToolHowToUse.header": "لماذا نجح",
   "app.components.ToolKeyItems.header": "",
@@ -74,9 +77,9 @@
   "app.components.ToolKeyItems.keyPrinciple": "المبدأ الأساسي",
   "app.components.ToolKeyItems.keyTactic": "التكتيكات الأساسية",
   "app.components.ToolKeyItems.keyTheory": "النظرية الأساسية",
-  "app.components.ToolSnapshotArea.callOut": "",
+  "app.components.ToolSnapshotArea.callOut": "مهلاً، حتى الآن هذا {type} هو تلخيصٌ فقط – و لكن الأشخاص مثلك يستخدمونها على الأرجح في شتى المجالات. هل لديك أفكار تشاركها حول كيفية استخدام هذا {type}؟ استمر و شاركها من خلال النموذج أدناه...",
   "app.components.ToolSnapshotArea.header": "",
-  "app.components.ToolSnapshotArea.seeMore": "",
+  "app.components.ToolSnapshotArea.seeMore": "شاهد “{name}” في Beautiful Trouble",
   "app.components.ToolSnapshotArea.viewForm": "اذهب إلى النموذج",
   "app.components.ToolTypeAllFull.header": "",
   "app.components.ToolTypeAllPartial.header": "",
@@ -127,7 +130,7 @@
   "app.containers.EmailTools.header": "",
   "app.containers.EmailTools.instruction": "",
   "app.containers.EmailTools.submit": "رفع",
-  "app.containers.EmptyToolsMessage.header": "",
+  "app.containers.EmptyToolsMessage.header": "يمكنك حفظ وحداتك التي تتردد عليها هنا، حيث لا تحتاج في المرة القادمة التي يمكنك الوصول فيها إلى صندوق الأدوات أن تبحث عنها في كل مرة أخرى.",
   "app.containers.EmptyToolsMessage.instruction": "انقر على \"{icon}\" لحفظ أدواتك المفضلة هنا. (ليس هناك حاجة لتسجيل الدخول؛ ستكون قائمتك هنا في المرة القادمة التي تقوم فيها بالزيارة من نفس الجهاز.)",
   "app.containers.HomePage.clearSearch": "مسح",
   "app.containers.HomePage.header": "",
@@ -141,18 +144,18 @@
   "app.containers.HomePage.theory": "نظرية",
   "app.containers.HomePage.viewAs": "عرض كـ",
   "app.containers.NewsFeed.follow": "متابعة",
-  "app.containers.NewsFeed.header":  "إننا نقدم هاشتاجات إخبارية متنوعة مرتبطة بحملات و تحركات مختلفة حول العالم لإبقائك على تواصل مع ما يحدث.",
+  "app.containers.NewsFeed.header": "إننا نقدم هاشتاجات إخبارية متنوعة مرتبطة بحملات و تحركات مختلفة حول العالم لإبقائك على تواصل مع ما يحدث.",
   "app.containers.PlatformsPage.header": "",
   "app.containers.SearchField.header": "",
   "app.containers.SearchField.placeholder": "البحث عن الكلمات الرئيسية، مثلا: التشريع، قمع الدولة، إلخ.",
   "app.containers.SubmitNewsFeed.header": "هل يوجد هاشتاج يجب أن نكون على علم به؟ دعنا نعلم.",
-  "app.containers.SubmitNewsFeed.submit":  "رفع",
-  "app.containers.SubmitRealWorldExample.description": "",
+  "app.containers.SubmitNewsFeed.submit": "رفع",
+  "app.containers.SubmitRealWorldExample.description": "وصف موجز (150 حرفاً)",
   "app.containers.SubmitRealWorldExample.header": "هل رأيت أو استخدمت هذا",
-  "app.containers.SubmitRealWorldExample.instruction": "",
+  "app.containers.SubmitRealWorldExample.instruction": "رائع! شارك هذه التجربة معنا على شكل رابط و إذا كان مثالاً قوياً فإننا سوف نعتمده في القسم أعلاه",
   "app.containers.SubmitRealWorldExample.submit": "رفع",
-  "app.containers.SubmitRealWorldExample.title": "",
-  "app.containers.SubmitRealWorldExample.url": "",
+  "app.containers.SubmitRealWorldExample.title": "اعط عنواناً قصيراً لمثالك",
+  "app.containers.SubmitRealWorldExample.url": "انسخ + الصق رابط الفيديو، أو الصورة، أو الصور بامتداد جي آي إف، أو ملفات الصوت",
   "app.containers.Tags.header": "شعارات",
   "app.containers.ToolPage.addTool": "حفظ هذه الوحدة",
   "app.containers.ToolPage.contributedByHeader": "تمت المساهمة من قبل",
@@ -165,7 +168,7 @@
   "app.containers.ToolPage.realWorldExamplesOf": "أمثلة العالم الحقيقي من {title}",
   "app.containers.ToolPage.relatedTools": "الوحدات المرتبطة",
   "app.containers.ToolPage.removeTool": "حذف هذه الوحدة من أدواتك",
-  "app.containers.ToolPage.share": "",
+  "app.containers.ToolPage.share": "مشاركة هذه الوحدة",
   "app.containers.ToolPage.showLess": "اقرأ أقل",
   "app.containers.ToolPage.showMore": "اقرأ المزيد",
   "app.containers.ToolPage.stories": "قصص",
@@ -175,6 +178,7 @@
   "app.containers.ToolPage.tags": "شعارات",
   "app.containers.ToolPage.theories": "نظريات",
   "app.containers.ToolPage.theory": "نظرية",
+  "app.containers.ToolPage.trainingHeader": "تدريب",
   "app.containers.Tools.header": "",
   "app.containers.Tools.myTools": "أدواتي",
   "app.containers.Tools.newsFeed": "التغذية الإخبارية",
