--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -20,6 +20,7 @@
   "app.components.ContributeMenu.howItWorks": "How does it work?",
   "app.components.ContributeType.callToAction": "[GO TO FORM](https://docs.google.com/forms/d/e/1FAIpQLSeC_EdxoO7owVnL8fjSERZlychwMhDOR-7rI1SDtpL4ijZgkg/viewform)",
   "app.components.ContributeType.header": "This is the ContributeType component !",
+  "app.components.CouldBeYou.header": "It Could\n\nBe You",
   "app.components.Footer.footer": "Beautiful Rising by Beautiful Rising, various authors is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License. Permissions beyond the scope of this license may be available at [beautifulrising.org](//beautifulrising.org). Documentation for the application programming interface (API) that powers Beautiful Rising can be [found on GitHub](https://github.com/BeautifulTrouble/api-docs#api-documentation-for-the-various-beautiful-projects).",
   "app.components.Header.aboutLink": "About",
   "app.components.Header.header": "BeautifulRising",
@@ -67,6 +68,8 @@
   "app.components.PlatformsPageComponents.what": "What It is",
   "app.components.RegionOptions.header": "Region",
   "app.components.SelectedToolComponents.header": "This is the SelectedToolComponents component !",
+  "app.components.ShareButton.emailMessage": "Checkout this awesome tool from BeautifulRising.org {url}",
+  "app.components.ShareButton.emailSubject": "Read about \"{title}\" at BeautifulRising.org",
   "app.components.ShareButton.header": "Share",
   "app.components.ToolHowToUse.header": "Why it Worked",
   "app.components.ToolKeyItems.header": "This is the ToolKeyItems component !",
@@ -74,7 +77,7 @@
   "app.components.ToolKeyItems.keyPrinciple": "Key Principle",
   "app.components.ToolKeyItems.keyTactic": "Key Tactic",
   "app.components.ToolKeyItems.keyTheory": "Key Theory",
-  "app.components.ToolSnapshotArea.callOut": "Hey, so far this principle is only summarized — but people like you are likely using it in all kinds of ways. Do you have insights to share on how to use this principle? Go ahead and share them through the form below...",
+  "app.components.ToolSnapshotArea.callOut": "Hey, so far this {type} is only summarized — but people like you are likely using it in all kinds of ways. Do you have insights to share on how to use this {type}? Go ahead and share them through the form below…",
   "app.components.ToolSnapshotArea.header": "This is the ToolSnapshotArea component !",
   "app.components.ToolSnapshotArea.seeMore": "See \"{name}\" in Beautiful Trouble",
   "app.components.ToolSnapshotArea.viewForm": "Go to Form",
@@ -175,6 +178,7 @@
   "app.containers.ToolPage.tags": "Tags",
   "app.containers.ToolPage.theories": "Theories",
   "app.containers.ToolPage.theory": "Theories",
+  "app.containers.ToolPage.trainingHeader": "Training",
   "app.containers.Tools.header": "This is Tools container !",
   "app.containers.Tools.myTools": "My Tools",
   "app.containers.Tools.newsFeed": "News Feed",
