--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -20,6 +20,7 @@
   "app.components.ContributeMenu.howItWorks": "¿CÓMO PUEDO CONTRIBUIR?",
   "app.components.ContributeType.callToAction": "[IR AL FORMULARIO](https://docs.google.com/forms/d/e/1FAIpQLSeC_EdxoO7owVnL8fjSERZlychwMhDOR-7rI1SDtpL4ijZgkg/viewform)",
   "app.components.ContributeType.header": "",
+  "app.components.CouldBeYou.header": "Podrías\n\nser tú",
   "app.components.Footer.footer": "Bella Rebeldía de Bella Rebeldía (diversos autores) está bajo una licencia Creative Commons Atribución-NoComercial-CompartirIgual 3.0 Unported. Los permisos que escapen al alcance de esta licencia pueden estar disponibles en [beautifulrising.org](//beautifulrising.org). La documentación del API (application programming interface, interfaz de programación de aplicaciones) con la que funciona Bella Rebeldía puede encontrarse en [GitHub](https://github.com/BeautifulTrouble/api-docs#api-documentation-for-the-various-beautiful-projects).",
   "app.components.Header.aboutLink": "About",
   "app.components.Header.header": "BeautifulRising",
@@ -67,6 +68,8 @@
   "app.components.PlatformsPageComponents.what": "DE QUÉ TRATA",
   "app.components.RegionOptions.header": "",
   "app.components.SelectedToolComponents.header": "This is the SelectedToolComponents component !",
+  "app.components.ShareButton.emailMessage": "",
+  "app.components.ShareButton.emailSubject": "",
   "app.components.ShareButton.header": "",
   "app.components.ToolHowToUse.header": "Why it Worked",
   "app.components.ToolKeyItems.header": "This is the ToolKeyItems component !",
@@ -74,7 +77,7 @@
   "app.components.ToolKeyItems.keyPrinciple": "Key Principle",
   "app.components.ToolKeyItems.keyTactic": "Key Tactic",
   "app.components.ToolKeyItems.keyTheory": "Key Theory",
-  "app.components.ToolSnapshotArea.callOut": "Hey, so far this principle is only summarized — but people like you are likely using it in all kinds of ways. Do you have insights to share on how to use this principle? Go ahead and share them through the form below...",
+  "app.components.ToolSnapshotArea.callOut": "Oye, hasta ahora esta herramienta {type} solo está resumida; pero la gente como tú probablemente la está usando de diferentes maneras. ¿Tienes ideas que quieras compartir sobre cómo usar esta herramienta? Adelante, compártelas utilizando el formulario que aparece a continuación…",
   "app.components.ToolSnapshotArea.header": "This is the ToolSnapshotArea component !",
   "app.components.ToolSnapshotArea.seeMore": "See \"{name}\" in Beautiful Trouble",
   "app.components.ToolSnapshotArea.viewForm": "Go to Form",
@@ -127,8 +130,8 @@
   "app.containers.EmailTools.header": "",
   "app.containers.EmailTools.instruction": "",
   "app.containers.EmailTools.submit": "",
-  "app.containers.EmptyToolsMessage.header": "",
-  "app.containers.EmptyToolsMessage.instruction": "",
+  "app.containers.EmptyToolsMessage.header": "Puedes guardar tus módulos de referencia aquí, de forma que la próxima vez que accedas a la caja de herramientas no tengas que buscarlos de nuevo.",
+  "app.containers.EmptyToolsMessage.instruction": "Pulsa el {icon} para guardar aquí tus herramientas favoritas (no tienes que iniciar sesión; tu lista estará aquí la próxima vez que accedas desde el mismo dispositivo).",
   "app.containers.HomePage.clearSearch": "",
   "app.containers.HomePage.header": "This is Home",
   "app.containers.HomePage.methodology": "METODOLOGÍA",
@@ -140,13 +143,13 @@
   "app.containers.HomePage.tags": "Etiquetas",
   "app.containers.HomePage.theory": "TEORÍA",
   "app.containers.HomePage.viewAs": "Ver como",
-  "app.containers.NewsFeed.follow": "",
-  "app.containers.NewsFeed.header": "",
+  "app.containers.NewsFeed.follow": "Seguir",
+  "app.containers.NewsFeed.header": "Seguimos diversas palabras clave de interés (hashtags) asociadas a diferentes campañas y movimientos por todo el mundo para mantenerte al tanto de lo que está sucediendo.",
   "app.containers.PlatformsPage.header": "PLATAFORMAS",
   "app.containers.SearchField.header": "This is SearchField container !",
   "app.containers.SearchField.placeholder": "Buscar palabras clave, como por ejemplo: legislación, represión estatal, etc.",
-  "app.containers.SubmitNewsFeed.header": "",
-  "app.containers.SubmitNewsFeed.submit": "",
+  "app.containers.SubmitNewsFeed.header": "¿Hay algún hashtag que deberíamos conocer? Comunícanoslo.",
+  "app.containers.SubmitNewsFeed.submit": "Enviar",
   "app.containers.SubmitRealWorldExample.description": "Una breve descripción (150 caracteres)",
   "app.containers.SubmitRealWorldExample.header": "¿HAS VISTO O UTILIZADO ESTO PRINCIPLE?",
   "app.containers.SubmitRealWorldExample.instruction": "¡Genial! Comparte esa experiencia con nosotros en forma de enlace y si es un ejemplo sólido lo mostraremos destacado en la sección anterior",
@@ -175,6 +178,7 @@
   "app.containers.ToolPage.tags": "Etiquetas",
   "app.containers.ToolPage.theories": "TEORÍAS",
   "app.containers.ToolPage.theory": "TEORÍA",
+  "app.containers.ToolPage.trainingHeader": "Formación",
   "app.containers.Tools.header": "This is Tools container !",
   "app.containers.Tools.myTools": "MIS HERRA-MIENTAS",
   "app.containers.Tools.newsFeed": "CANAL DE NOTICIAS",
