--- a/app/translations/fr.json
+++ b/app/translations/fr.json
@@ -20,6 +20,7 @@
   "app.components.ContributeMenu.howItWorks": "",
   "app.components.ContributeType.callToAction": "",
   "app.components.ContributeType.header": "",
+  "app.components.CouldBeYou.header": "",
   "app.components.Footer.footer": "",
   "app.components.Header.aboutLink": "",
   "app.components.Header.header": "",
@@ -67,6 +68,8 @@
   "app.components.PlatformsPageComponents.what": "",
   "app.components.RegionOptions.header": "",
   "app.components.SelectedToolComponents.header": "",
+  "app.components.ShareButton.emailMessage": "",
+  "app.components.ShareButton.emailSubject": "",
   "app.components.ShareButton.header": "",
   "app.components.ToolHowToUse.header": "",
   "app.components.ToolKeyItems.header": "",
@@ -175,6 +178,7 @@
   "app.containers.ToolPage.tags": "",
   "app.containers.ToolPage.theories": "",
   "app.containers.ToolPage.theory": "",
+  "app.containers.ToolPage.trainingHeader": "",
   "app.containers.Tools.header": "",
   "app.containers.Tools.myTools": "",
   "app.containers.Tools.newsFeed": "",
