--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -108,17 +108,17 @@
   "app.components.ToolsRequestTraining.requestTraining": "يمكنك أيضاً طلب تدريب Beautiful Rising",
   "app.components.TrainingMenu.header": "",
   "app.components.TrainingMenu.otherResources": "",
-  "app.components.TrainingMenu.requestTraining": "",
+  "app.components.TrainingMenu.requestTraining": "يمكنك أيضاً طلب تدريب Beautiful Rising",
   "app.components.TypeFlagTooltip.header": "",
   "app.components.TypeMenu.header": "",
   "app.components.TypeMenu.stories": "قصص",
   "app.containers.AboutPage.description": "",
   "app.containers.AboutPage.header": "",
   "app.containers.AskTheContributor.emailPlaceholder": "",
-  "app.containers.AskTheContributor.header": "",
-  "app.containers.AskTheContributor.questionPlaceholder": "",
-  "app.containers.AskTheContributor.subheader": "",
-  "app.containers.AskTheContributor.submit": "",
+  "app.containers.AskTheContributor.header": "أسئلة إلى المساهم؟",
+  "app.containers.AskTheContributor.questionPlaceholder": "اكتب سؤالك هنا",
+  "app.containers.AskTheContributor.subheader": "اسأل {author} هنا...",
+  "app.containers.AskTheContributor.submit": "رفع",
   "app.containers.ContactUs.complete": "",
   "app.containers.ContactUs.header": "اتصل بنا",
   "app.containers.ContactUs.submit": "رفع",
