--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -70,13 +70,13 @@
   "app.components.SelectedToolComponents.header": "This is the SelectedToolComponents component !",
   "app.components.ShareButton.emailMessage": "",
   "app.components.ShareButton.emailSubject": "",
-  "app.components.ShareButton.header": "",
-  "app.components.ToolHowToUse.header": "Why it Worked",
+  "app.components.ShareButton.header": "Compartir este módulo",
+  "app.components.ToolHowToUse.header": "Por qué funcionó",
   "app.components.ToolKeyItems.header": "This is the ToolKeyItems component !",
-  "app.components.ToolKeyItems.keyMethodology": "Key Methodology",
-  "app.components.ToolKeyItems.keyPrinciple": "Key Principle",
-  "app.components.ToolKeyItems.keyTactic": "Key Tactic",
-  "app.components.ToolKeyItems.keyTheory": "Key Theory",
+  "app.components.ToolKeyItems.keyMethodology": "Metodología clave",
+  "app.components.ToolKeyItems.keyPrinciple": "Principio clave",
+  "app.components.ToolKeyItems.keyTactic": "Tácticas clave",
+  "app.components.ToolKeyItems.keyTheory": "Teoría clave",
   "app.components.ToolSnapshotArea.callOut": "Oye, hasta ahora esta herramienta {type} solo está resumida; pero la gente como tú probablemente la está usando de diferentes maneras. ¿Tienes ideas que quieras compartir sobre cómo usar esta herramienta? Adelante, compártelas utilizando el formulario que aparece a continuación…",
   "app.components.ToolSnapshotArea.header": "This is the ToolSnapshotArea component !",
   "app.components.ToolSnapshotArea.seeMore": "See \"{name}\" in Beautiful Trouble",
@@ -105,7 +105,7 @@
   "app.components.ToolWhyItFailed.header": "",
   "app.components.ToolsComponents.header": "This is the ToolsComponents component !",
   "app.components.ToolsPotentialRisk.potentialRiskHeader": "Potential Risks",
-  "app.components.ToolsRequestTraining.requestTraining": "You can also <a href=\"https://docs.google.com/forms/d/e/1FAIpQLSfbN0Qb5P2ORCHYl4UPEdA-01I-ixPP9TRjEFv5c05HGguwrA/viewform\" target=\"_blank\">request</a> a Beautiful Rising training",
+  "app.components.ToolsRequestTraining.requestTraining": "También puedes [solicitar]({form}) una capacitación de Bella Rebeldía",
   "app.components.TrainingMenu.header": "CAPACITACIÓN + RECURSOS",
   "app.components.TrainingMenu.otherResources": "OTROS RECURSOS",
   "app.components.TrainingMenu.requestTraining": "SOLICITA UNA CAPACITACIÓN",
@@ -115,10 +115,10 @@
   "app.containers.AboutPage.description": "Beautiful Rising harnesses the insights of changemakers worldwide to help make our movements more strategic, creative and effective.",
   "app.containers.AboutPage.header": "ACERCA DEL PROYECTO",
   "app.containers.AskTheContributor.emailPlaceholder": "",
-  "app.containers.AskTheContributor.header": "",
-  "app.containers.AskTheContributor.questionPlaceholder": "",
-  "app.containers.AskTheContributor.subheader": "",
-  "app.containers.AskTheContributor.submit": "",
+  "app.containers.AskTheContributor.header": "¿Preguntas para el colaborador?",
+  "app.containers.AskTheContributor.questionPlaceholder": "Escribe aquí tu pregunta",
+  "app.containers.AskTheContributor.subheader": "Pregúntale a {author} aquí...",
+  "app.containers.AskTheContributor.submit": "Enviar",
   "app.containers.ContactUs.complete": "",
   "app.containers.ContactUs.header": "CONTÁCTANOS",
   "app.containers.ContactUs.submit": "ENVIAR",
@@ -168,7 +168,7 @@
   "app.containers.ToolPage.realWorldExamplesOf": "EJEMPLOS DEL MUNDO REAL SOBRE {title}",
   "app.containers.ToolPage.relatedTools": "MÓDULOS RELACIONADOS",
   "app.containers.ToolPage.removeTool": "ELIMINAR ESTE MÓDULO DE TUS HERRAMIENTAS",
-  "app.containers.ToolPage.share": "",
+  "app.containers.ToolPage.share": "Compartir este módulo",
   "app.containers.ToolPage.showLess": "LEER MENOS",
   "app.containers.ToolPage.showMore": "LEER MÁS",
   "app.containers.ToolPage.stories": "Historias",
