Changes for fix

--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -79,8 +79,8 @@
   "app.components.ToolKeyItems.keyTheory": "Teoría clave",
   "app.components.ToolSnapshotArea.callOut": "Oye, hasta ahora esta herramienta {type} solo está resumida; pero la gente como tú probablemente la está usando de diferentes maneras. ¿Tienes ideas que quieras compartir sobre cómo usar esta herramienta? Adelante, compártelas utilizando el formulario que aparece a continuación…",
   "app.components.ToolSnapshotArea.header": "This is the ToolSnapshotArea component !",
-  "app.components.ToolSnapshotArea.seeMore": "See \"{name}\" in Beautiful Trouble",
-  "app.components.ToolSnapshotArea.viewForm": "Go to Form",
+  "app.components.ToolSnapshotArea.seeMore": "Ver \"{name}\" en Bella Rebeldía",
+  "app.components.ToolSnapshotArea.viewForm": "Ir al formulario",
   "app.components.ToolTypeAllFull.header": "This is the ToolTypeAllFull component !",
   "app.components.ToolTypeAllPartial.header": "This is the ToolTypeAllPartial component !",
   "app.components.ToolTypeArea.allHead": "Todos",
