Translation of AR EN ES

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -136,7 +136,7 @@
   "app.containers.HomePage.header": "",
   "app.containers.HomePage.methodology": "منهجية",
   "app.containers.HomePage.principle": "مبدأ",
-  "app.containers.HomePage.searchResults": "",
+  "app.containers.HomePage.searchResults": "نتائج البحث الخاصة بـ {label}",
   "app.containers.HomePage.sortBy": "ترتيب حسب",
   "app.containers.HomePage.story": "قصة",
   "app.containers.HomePage.tactic": "تكتيك",
