Fix issues in language

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -161,9 +161,9 @@
   "app.containers.ToolPage.contributedByHeader": "Contributed By",
   "app.containers.ToolPage.header": "This is ToolPage container !",
   "app.containers.ToolPage.learnMore": "Learn More",
-  "app.containers.ToolPage.methodologies": "Methodologies",
+  "app.containers.ToolPage.methodologies": "Methodology",
   "app.containers.ToolPage.methodology": "Methodologies",
-  "app.containers.ToolPage.principle": "Principles",
+  "app.containers.ToolPage.principle": "Principle",
   "app.containers.ToolPage.principles": "Principles",
   "app.containers.ToolPage.realWorldExamplesOf": "Real World Examples of \"{title}\"",
   "app.containers.ToolPage.relatedTools": "Related Tools",
@@ -172,12 +172,12 @@
   "app.containers.ToolPage.showLess": "Read Less",
   "app.containers.ToolPage.showMore": "Read More",
   "app.containers.ToolPage.stories": "Stories",
-  "app.containers.ToolPage.story": "Stories",
-  "app.containers.ToolPage.tactic": "Tactics",
+  "app.containers.ToolPage.story": "Story",
+  "app.containers.ToolPage.tactic": "Tactic",
   "app.containers.ToolPage.tactics": "Tactics",
   "app.containers.ToolPage.tags": "Tags",
   "app.containers.ToolPage.theories": "Theories",
-  "app.containers.ToolPage.theory": "Theories",
+  "app.containers.ToolPage.theory": "Theory",
   "app.containers.ToolPage.trainingHeader": "Training",
   "app.containers.Tools.header": "This is Tools container !",
   "app.containers.Tools.myTools": "My Tools",
