Platforms page alignment

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -55,17 +55,17 @@
   "app.components.OnboardingContent.welcomeMessage": "",
   "app.components.OnboardingContent.welcomeSpiel": "",
   "app.components.OnboardingModal.header": "",
-  "app.components.PlatformsMenu.chatbot": "",
-  "app.components.PlatformsMenu.game": "",
-  "app.components.PlatformsMenu.header": "",
-  "app.components.PlatformsMenu.pdf": "",
+  "app.components.PlatformsMenu.chatbot": "برنامج الدردشة",
+  "app.components.PlatformsMenu.game": "لعبة",
+  "app.components.PlatformsMenu.header": "المنصات",
+  "app.components.PlatformsMenu.pdf": "PDF",
   "app.components.PlatformsMenu.subheader": "استكشف وسائل أخرى للوصول إلى صندوق الأدوات",
-  "app.components.PlatformsPageComponents.chatbotHeader": "",
-  "app.components.PlatformsPageComponents.gameHeader": "",
-  "app.components.PlatformsPageComponents.header": "",
-  "app.components.PlatformsPageComponents.how": "",
-  "app.components.PlatformsPageComponents.pdfHeader": "",
-  "app.components.PlatformsPageComponents.what": "",
+  "app.components.PlatformsPageComponents.chatbotHeader": "برنامج الدردشة",
+  "app.components.PlatformsPageComponents.gameHeader": "لعبة",
+  "app.components.PlatformsPageComponents.header": "المنصات",
+  "app.components.PlatformsPageComponents.how": "كيفية الاستخدام",
+  "app.components.PlatformsPageComponents.pdfHeader": "PDF",
+  "app.components.PlatformsPageComponents.what": "ما هذا؟",
   "app.components.RegionOptions.header": "",
   "app.components.SelectedToolComponents.header": "",
   "app.components.ShareButton.emailMessage": "",
@@ -145,7 +145,7 @@
   "app.containers.HomePage.viewAs": "عرض كـ",
   "app.containers.NewsFeed.follow": "متابعة",
   "app.containers.NewsFeed.header": "إننا نقدم هاشتاجات إخبارية متنوعة مرتبطة بحملات و تحركات مختلفة حول العالم لإبقائك على تواصل مع ما يحدث.",
-  "app.containers.PlatformsPage.header": "",
+  "app.containers.PlatformsPage.header": "المنصات",
   "app.containers.SearchField.header": "",
   "app.containers.SearchField.placeholder": "البحث عن الكلمات الرئيسية، مثلا: التشريع، قمع الدولة، إلخ.",
   "app.containers.SubmitNewsFeed.header": "هل يوجد هاشتاج يجب أن نكون على علم به؟ دعنا نعلم.",
