Translation of design

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1,20 +1,20 @@
 {
   "app.components.AboutMenu.header": "",
-  "app.components.AboutPageComponents.beautifulTroubleAAHeader": "",
+  "app.components.AboutPageComponents.beautifulTroubleAAHeader": "ما هي العلاقة بين Beautiful Trouble و Action Aid ؟",
   "app.components.AboutPageComponents.definition": "",
-  "app.components.AboutPageComponents.faqHeader": "",
+  "app.components.AboutPageComponents.faqHeader":  "هل من أسئلةٍ أخرى؟",
   "app.components.AboutPageComponents.header": "",
   "app.components.AboutPageComponents.inspiration": "",
   "app.components.AboutPageComponents.ipsum": "",
-  "app.components.AboutPageComponents.ourAdvisoryNetworkHeader": "",
-  "app.components.AboutPageComponents.ourProcessHeader": "",
-  "app.components.AboutPageComponents.ourTeamHeader": "",
-  "app.components.AboutPageComponents.ourValuesHeader": "",
-  "app.components.AboutPageComponents.participantsHeader": "",
-  "app.components.AboutPageComponents.partnersHeader": "",
-  "app.components.AboutPageComponents.prototyping": "",
-  "app.components.AboutPageComponents.realization": "",
-  "app.components.AboutPageComponents.theToolboxHeader": "",
+  "app.components.AboutPageComponents.ourAdvisoryNetworkHeader": "من لدينا في الشبكة الاستشارية؟",
+  "app.components.AboutPageComponents.ourProcessHeader": "كيف أنشأنا صندوق العدّة؟",
+  "app.components.AboutPageComponents.ourTeamHeader": "من هم أعضاء فريقنا؟",
+  "app.components.AboutPageComponents.ourValuesHeader": "ما هي قيمنا؟",
+  "app.components.AboutPageComponents.participantsHeader": "المشاركون والمشاركات + ورشات العمل المعنيّة.",
+  "app.components.AboutPageComponents.partnersHeader": "من هم شركاؤنا في الشبكة؟",
+  "app.components.AboutPageComponents.prototyping": "# PROTOTYPING\nIn each jam session, low-fidelity prototypes of the toolbox were presented to activists to take apart and put back together based on their needs and challenges.",
+  "app.components.AboutPageComponents.realization": "# REALIZATION\nEarly prototypes evolved into multiple iterations of what’s currently a [game](https://beautifulrising.org/platforms/game), [chatbot](https://beautifulrising.org/platforms/chatbot), and website. With your help, the content and the form will continue to evolve!",
+  "app.components.AboutPageComponents.theToolboxHeader": "ماالذي لدينا في صندوق العدّة؟",
   "app.components.Body.header": "",
   "app.components.ContributeMenu.header": "",
   "app.components.ContributeMenu.howItWorks": "",
@@ -106,14 +106,14 @@
   "app.components.ToolsComponents.header": "",
   "app.components.ToolsPotentialRisk.potentialRiskHeader": "المخاطر المحتملة",
   "app.components.ToolsRequestTraining.requestTraining": "يمكنك أيضاً طلب تدريب Beautiful Rising",
-  "app.components.TrainingMenu.header": "",
-  "app.components.TrainingMenu.otherResources": "",
+  "app.components.TrainingMenu.header": "تدريب+موارد",
+  "app.components.TrainingMenu.otherResources": "طلب تدريب",
   "app.components.TrainingMenu.requestTraining": "يمكنك أيضاً طلب تدريب Beautiful Rising",
   "app.components.TypeFlagTooltip.header": "",
   "app.components.TypeMenu.header": "",
   "app.components.TypeMenu.stories": "قصص",
-  "app.containers.AboutPage.description": "",
-  "app.containers.AboutPage.header": "",
+  "app.containers.AboutPage.description": "يستفيد مشروع النضال الجميل من رؤى صانعي التغيير في جميع أنحاء العالم للمساعدة في جعل حركاتنا الاجتماعية أكثر استراتيجية وإبداعاً وفاعلية.",
+  "app.containers.AboutPage.header": "عنا",
   "app.containers.AskTheContributor.emailPlaceholder": "",
   "app.containers.AskTheContributor.header": "أسئلة إلى المساهم؟",
   "app.containers.AskTheContributor.questionPlaceholder": "اكتب سؤالك هنا",
@@ -124,7 +124,7 @@
   "app.containers.ContactUs.submit": "رفع",
   "app.containers.ContactUs.subscribe": "اشترك في نشرتنا الإخبارية",
   "app.containers.ContributePage.examples": "",
-  "app.containers.ContributePage.header": "",
+  "app.containers.ContributePage.header": "مساهمة",
   "app.containers.ContributePage.typeOfContent": "",
   "app.containers.EmailTools.complete": "",
   "app.containers.EmailTools.header": "",
@@ -189,6 +189,6 @@
   "app.containers.ToolsSortOptions.header": "",
   "app.containers.ToolsSortOptions.newestButton": "الأحدث",
   "app.containers.ToolsViewOptions.header": "",
-  "app.containers.TrainingPage.header": "",
+  "app.containers.TrainingPage.header": "تدريب+موارد",
   "app.containers.TrainingPage.otherResources": ""
 }
