--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -112,7 +112,7 @@
   "app.components.TypeFlagTooltip.header": "",
   "app.components.TypeMenu.header": "This is the TypeMenu component !",
   "app.components.TypeMenu.stories": "Historias",
-  "app.containers.AboutPage.description": "Beautiful Rising harnesses the insights of changemakers worldwide to help make our movements more strategic, creative and effective.",
+  "app.containers.AboutPage.description": "En Bella Rebeldía utilizamos los conocimientos de personas generadoras de cambio de todo el mundo para que nuestros movimientos sean más estratégicos, creativos y efectivos.",
   "app.containers.AboutPage.header": "ACERCA DEL PROYECTO",
   "app.containers.AskTheContributor.emailPlaceholder": "",
   "app.containers.AskTheContributor.header": "¿Preguntas para el colaborador?",
