--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2,10 +2,10 @@
   "app.components.AboutMenu.header": "About",
   "app.components.AboutPageComponents.beautifulTroubleAAHeader": "What’s the connection with Beautiful Trouble + ActionAid?",
   "app.components.AboutPageComponents.definition": "# DEFINITION\nWe’ve conducted six ‘jam sessions’ around the world with diverse groups of activists to better understand the problems they’re facing and generate locally relevant content for the toolbox.",
-  "app.components.AboutPageComponents.faqHeader": "FAQ",
+  "app.components.AboutPageComponents.faqHeader": "You still have questions?",
   "app.components.AboutPageComponents.header": "This is the AboutPageComponents component !",
   "app.components.AboutPageComponents.inspiration": "# INSPIRATION\nThis toolbox was inspired by the [Beautiful Trouble book and website](http://beautifultrouble.org/). The scope has been expanded to involve a more diverse group of activists as both makers and users of the toolkit.",
-  "app.components.AboutPageComponents.ipsum": "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariaturSed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima",
+  "app.components.AboutPageComponents.ipsum": "",
   "app.components.AboutPageComponents.ourAdvisoryNetworkHeader": "WHO’S IN OUR ADVISORY NETWORK?",
   "app.components.AboutPageComponents.ourProcessHeader": "HOW DID WE MAKE THE TOOLBOX?",
   "app.components.AboutPageComponents.ourTeamHeader": "WHO’S ON OUR TEAM?",
@@ -14,7 +14,7 @@
   "app.components.AboutPageComponents.partnersHeader": "WHO ARE OUR NETWORK PARTNERS?",
   "app.components.AboutPageComponents.prototyping": "# PROTOTYPING\nIn each jam session, low-fidelity prototypes of the toolbox were presented to activists to take apart and put back together based on their needs and challenges.",
   "app.components.AboutPageComponents.realization": "# REALIZATION\nEarly prototypes evolved into multiple iterations of what’s currently a [game](https://beautifulrising.org/platforms/game), [chatbot](https://beautifulrising.org/platforms/chatbot), and website. With your help, the content and the form will continue to evolve!",
-  "app.components.AboutPageComponents.theToolboxHeader": "The Toolbox",
+  "app.components.AboutPageComponents.theToolboxHeader": "What's inside the toolbox?",
   "app.components.Body.header": "This is the Body component !",
   "app.components.ContributeMenu.header": "Contribute",
   "app.components.ContributeMenu.howItWorks": "How does it work?",
