Load arabic font

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -161,8 +161,8 @@
   "app.containers.ToolPage.contributedByHeader": "Contributed By",
   "app.containers.ToolPage.header": "This is ToolPage container !",
   "app.containers.ToolPage.learnMore": "Learn More",
-  "app.containers.ToolPage.methodologies": "Methodology",
-  "app.containers.ToolPage.methodology": "Methodologies",
+  "app.containers.ToolPage.methodologies": "Methodologies",
+  "app.containers.ToolPage.methodology": "Methodology",
   "app.containers.ToolPage.principle": "Principle",
   "app.containers.ToolPage.principles": "Principles",
   "app.containers.ToolPage.realWorldExamplesOf": "Real World Examples of \"{title}\"",
