--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1,5 +1,5 @@
 {
-  "app.components.AboutMenu.header": "",
+  "app.components.AboutMenu.header": "عنا",
   "app.components.AboutPageComponents.beautifulTroubleAAHeader": "ما هي العلاقة بين Beautiful Trouble و Action Aid ؟",
   "app.components.AboutPageComponents.definition": "",
   "app.components.AboutPageComponents.faqHeader":  "هل من أسئلةٍ أخرى؟",
@@ -16,8 +16,8 @@
   "app.components.AboutPageComponents.realization": "# REALIZATION\nEarly prototypes evolved into multiple iterations of what’s currently a [game](https://beautifulrising.org/platforms/game), [chatbot](https://beautifulrising.org/platforms/chatbot), and website. With your help, the content and the form will continue to evolve!",
   "app.components.AboutPageComponents.theToolboxHeader": "ماالذي لدينا في صندوق العدّة؟",
   "app.components.Body.header": "",
-  "app.components.ContributeMenu.header": "",
-  "app.components.ContributeMenu.howItWorks": "",
+  "app.components.ContributeMenu.header": "مساهمة",
+  "app.components.ContributeMenu.howItWorks": "كيف تعمل؟",
   "app.components.ContributeType.callToAction": "",
   "app.components.ContributeType.header": "",
   "app.components.CouldBeYou.header": "قد يكون أنت",
@@ -30,16 +30,16 @@
   "app.components.Link.header": "",
   "app.components.Logo.header": "",
   "app.components.Logo.language": "ar",
-  "app.components.Menu.advisoryNetMenu": "",
-  "app.components.Menu.btaaMenu": "",
-  "app.components.Menu.faqMenu": "",
-  "app.components.Menu.header": "",
-  "app.components.Menu.home": "",
-  "app.components.Menu.partnersMenu": "",
-  "app.components.Menu.processMenu": "",
-  "app.components.Menu.teamMenu": "",
-  "app.components.Menu.toolBoxMenu": "",
-  "app.components.Menu.valuesMenu": "",
+  "app.components.Menu.advisoryNetMenu": "شبكتنا الاستشارية",
+  "app.components.Menu.btaaMenu": "المتاعب الجميلة AA",
+  "app.components.Menu.faqMenu": "FAQ",
+  "app.components.Menu.header": "This is the Menu component !",
+  "app.components.Menu.home": "Home",
+  "app.components.Menu.partnersMenu": "شركاؤنا",
+  "app.components.Menu.processMenu": "سير عمليتنا",
+  "app.components.Menu.teamMenu": "فريقنا",
+  "app.components.Menu.toolBoxMenu": "ما الذي في صندوق العدة",
+  "app.components.Menu.valuesMenu": "قيمنا",
   "app.components.ModalMenu.header": "قائمة",
   "app.components.NotFoundPage.header": "",
   "app.components.OnboardingContent.advisoryNetwork": "",
