--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -107,8 +107,8 @@
   "app.components.ToolsPotentialRisk.potentialRiskHeader": "المخاطر المحتملة",
   "app.components.ToolsRequestTraining.requestTraining": "يمكنك أيضاً طلب تدريب Beautiful Rising",
   "app.components.TrainingMenu.header": "تدريب+موارد",
-  "app.components.TrainingMenu.otherResources": "طلب تدريب",
-  "app.components.TrainingMenu.requestTraining": "يمكنك أيضاً طلب تدريب Beautiful Rising",
+  "app.components.TrainingMenu.otherResources": "موارد أخرى",
+  "app.components.TrainingMenu.requestTraining": "طلب تدريب",
   "app.components.TypeFlagTooltip.header": "",
   "app.components.TypeMenu.header": "",
   "app.components.TypeMenu.stories": "قصص",
